--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="5097426561-3bsoec6m4vaps99e7cu1hql02tr768e2.apps.googleusercontent.com">
+
+
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
